--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,19 +1,15 @@
 {
-  "version": "0.2.0",
-  "configurations": [
-      {
-          "type": "node",
-          "request": "launch",
-          "name": "Debug TypeScript in Node.js",
-          "preLaunchTask": "npm: build",
-          "program": "${workspaceFolder}/src/index.ts",
-          "protocol": "inspector",
-          "outFiles": [
-            "${workspaceFolder}/dist/**/*.js"
-          ],
-          "sourceMaps": true,
-          "smartStep": true,
-          "internalConsoleOptions": "openOnSessionStart"
-        }
-  ]
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Nodemon Debug",
+            "port": 9229,
+            "restart": true
+          },                   
+    ]
 }
