--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf ./build && tsc",
-    "start:dev": "nodemon",
+    "start:dev": "nodemon src/christmas-lights-kata/christmas-lights-kata.ts",
+    "debbug": "nodemon --inspect src/christmas-lights-kata/christmas-lights-kata.ts",
     "start": "npm run build && node build/index.js",
     "lint": "eslint . --ext .ts",
     "test": "jest",
