feat(christmas-lights-kata): Try to debug from outside container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 version: '3' #This denotes that we are using version 3 of Docker Compose
 services: #This section defines all the different containers we will create.
-  kata-template : #This is the name of our Nextjs application.
+  kata-template: #This is the name of our Nextjs application.
     image: node:alpine
-    working_dir: "/app"
+    working_dir: '/app'
     volumes:
       - .:/app
     ports:
       - 3000-3001
+      - 9229-9229
