--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "nodemon": "^1.19.1",
     "rimraf": "^3.0.0",
     "ts-node": "^8.3.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "express": "4.17.3",
+    "@types/express": "4.17.13"
   },
   "dependencies": {
     "eslint-plugin-jest": "^24.1.0",
